# universal-media-downloader-main

./: README.md  README.ru.md
.github/workflows/: build-windows.yml
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src/: App.vue
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json  test.rs
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: AboutPage.vue  DownloadItem.vue  DownloadsPage.vue  HistoryPage.vue  SettingsPage.vue
tauri-app/src/i18n/: index.js
tauri-app/src/locales/: en.json  ru.json  uk.json
tauri-app/src/stores/: index.js
tauri-app/src/styles/: main.css
